# Agents_Control_Plane

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml
.claude/: launch.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
apps/api/app/routers/: analytics.py  approvals.py  governance.py  overview.py  runs.py  traces.py
apps/api/app/services/: evals.py  ingest.py  policies.py
apps/api/app/workers/: queue.py  tasks.py
apps/api/tests/: test_ingest.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/approvals/: page.tsx
apps/web/app/(app)/audit/: page.tsx
apps/web/app/(app)/billing/: page.tsx
apps/web/app/(app)/compare/: page.tsx
apps/web/app/(app)/evaluations/: page.tsx
apps/web/app/(app)/health/: page.tsx
apps/web/app/(app)/overview/: page.tsx
apps/web/components/: analytics.tsx  animated-number.tsx  breakdowns.tsx  charts.tsx  heatmap.tsx  landing-stats.tsx  live-chart.tsx  live-feed.tsx  metric-card.tsx  sidebar.tsx  sparkline.tsx  theme.tsx  ticker.tsx  timeseries.tsx  topbar.tsx  trace-waterfall.tsx  ui.tsx
apps/web/lib/: agents.ts  api.ts  utils.ts
docs/: DEPLOY.md
examples/: custom_agent.py
infra/docker/: Caddyfile  api.Dockerfile
seeds/: backfill.py  generate_demo_data.py  live_traffic.py
(+4 files in other folders)
