[project]
name = "acp-api"
version = "0.1.0"
description = "Agent Control Plane — backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",        # dev / SQLite fallback
    "asyncpg>=0.29",          # Postgres (prod)
    "alembic>=1.13",
    "arq>=0.26",              # Redis-backed async workers
    "redis>=5.0",
    "jsonschema>=4.22",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
vector = ["qdrant-client>=1.9", "fastembed>=0.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
